# kpress

./: .copier-answers.yml  .flowmarkignore  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXTRACTION.md  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPLY-CHAIN-SECURITY.md  TODO.md  biome.json  kpress-design.md  kpress-icons.md  kpress-reader-features.md  lefthook.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  uv.toml
.agents/skills/flowmark/: SKILL.md
.agents/skills/pprose-common-edit/: SKILL.md
.agents/skills/pprose-compare/: SKILL.md
.agents/skills/pprose-copy-edit/: SKILL.md
.agents/skills/pprose-eval/: SKILL.md
.agents/skills/pprose-full-edit/: SKILL.md
.agents/skills/pprose-review/: SKILL.md
.agents/skills/repren/: SKILL.md
.claude/: settings.json
.claude/skills/tbd/: SKILL.md
.claude/skills/using-kpress/: SKILL.md
.codex/: hooks.json
.github/workflows/: ci.yml  publish.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01ktr1qnh09x4jxcer8gg19ajt.md  is-01ktr1r4d07hbghtm6wp29jk7x.md  is-01ktr8d5nfmzq3nbamdte1hwd6.md  is-01ktrcf35sbv7aex5whe2sqrq9.md  is-01kxcachmxrtpqdn6tmxasmv1e.md  is-01kxcaxb0bnrt6yr3yhye4cq09.md  is-01kxcaxb6mm170gqj4a6zk5p4b.md  is-01kxcaxbcv8grb6hb92k9bzg45.md  is-01kxcaxbm1kwka3bz82hf6vmyj.md  is-01kxcaxbt84v7hdbqqah579bp7.md  is-01kxcpnre3k47pw88htva8xt0d.md  is-01kxcppx52sr5t9s438qwamc62.md  is-01kxcppxcf27r7ekbbxes2nk2r.md  is-01kxcppxk5g18pe9a62t30tx4j.md  is-01kxcppxsy5bzy9ffa490tqxj7.md  is-01kxcppy0ced5bh9ebxah1gj4n.md  is-01kxcppy71npy797rt8ak0qhex.md  is-01kxcppydn8w7kx1wwmmpxcw0f.md  is-01kxcppymay9t6bafe5qbhqv6x.md  is-01kxcppytvpvw0210jkmpk2g60.md  is-01kxcppz16wtwj7qtzdmxrr5rf.md  is-01kxcppz7pyg8b0dx1b3v2s2t7.md  is-01kxcppze5dcef44awg1aevm76.md  is-01kxcppzmqm09d56dcdgwr1yar.md  is-01kxcpz0t5x7ft3vj0x4dzzrc3.md  is-01kxcpz10rj1j639k6atzn7pak.md  is-01kxcvc8mb76w6szhnm0bkttbd.md  is-01kxcvck96qb5km7rkb2wmqdqz.md  is-01kxcvck97aakfh00efy4xtgtf.md  is-01kxcwyyh3fkjb6h7w64bmkzqb.md  is-01kxcwyywhmpsv8tyfqv7gqg1f.md  is-01kxcwyz7jyzhkgdz7487dwara.md  is-01kxcwyzj7w02p1yzp1nkqs8b6.md  is-01kxcwyzwysd2bygcz8wampbfc.md  is-01kxcwz082qy4gh4ep7p33p8hv.md  is-01kxcwz0mmg9an4e2bdvwqegcv.md  is-01kxcwz106c96ekwj8ajpvpjqq.md  is-01kxcwz1b203e4pt03g94qtx7n.md  is-01kxcwz1nysk8dy0p68m3vg4yt.md  is-01kxe5fsycffktg2g4jmw6nxm9.md  (+95 more)
.tbd/data-sync/mappings/: ids.yml
devtools/: biome.py  check_distribution.py  check_supply_chain.py  css_to_oklch.py  extraction_check.py  js_dom_tests.py  lint.py  npm_policy.py  npm_tools.py  public_hygiene.py  tsc_check.py
docs/: README.md  content-size-indicators.plan.md  development.md  history-navigation.plan.md  installation.md  interactive-footnote-popovers.plan.md  kpress-completion-plan.md  kpress-design.md  kpress-e2e-testing.runbook.md  kpress-icons.md  kpress-operations-and-host-integration.md  kpress-static-publish.runbook.md  kpress-validation.runbook.md  publishing.md  toc-collapse.plan.md
docs/project/specs/active/: plan-2026-07-18-collapsible-toc.md
docs/releases/: 0.1.0.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md
examples/: .gitignore  README.md  _runner.py
examples/single-doc/: build.py  doc.md
examples/static-site/: build.py  kpress.yml
examples/static-site/content/: extensions.md  index.md
examples/static-site/content/demo/: extensions.css  extensions.js
examples/static-site/content/guides/: getting-started.md  markdown-features.md
examples/static-site/content/reference/: api.md
examples/wrapped-site/: build.py  sitemap.py
examples/wrapped-site/content/: index.md
examples/wrapped-site/content/blog/: announcing.md
examples/wrapped-site/content/docs/: configuration.md  installation.md
examples/wrapped-site/templates/: layout.html
src/kpress/: __init__.py  _version.py  cli.py  contract.py  errors.py  models.py  output.py  runtime.py
src/kpress/format/: __init__.py  assets.py  markdown.py  model.py  pdf.py  render.py  sanitize.py  templating.py  theme.py  validate.py
src/kpress/format/templates/: fragment.html.jinja  page.html.jinja
src/kpress/licenses/: lucide.txt  pt-serif.txt  source-sans-3.txt
src/kpress/publish/: __init__.py  build.py  cache.py  capability.py  config.py  discover.py  frontmatter.py  manifest.py  optimize.py  routes.py  site_files.py
src/kpress/workflow/: __init__.py  convert.py  export.py  format.py  paste.py  workspace.py
tests/: __init__.py  equivalence_helpers.py  golden_helpers.py  test_asset_contract.py  test_asset_manifest.py  test_capability_probe.py  test_clean_room_wheel.py  test_content_card.py  test_distribution.py  test_doctor.py  test_document_contract.py  test_equivalence.py  test_examples.py  test_extraction_check.py  test_font_mode.py  test_format_render.py  test_golden_publish.py  test_golden_readable_vs_hashed.py  test_golden_readable_vs_sealed.py  test_golden_render.py  test_icon_button_hover.py  test_icons.py  test_kpress_cli.py  test_offline_mathml.py  test_optimize.py  test_optimize_locked_deps.py  test_optimized_build_assets.py  test_output.py  test_package_policy.py  test_pdf_contract.py  test_pipeline.py  test_playwright_clearance.py  test_playwright_history.py  test_playwright_toc_collapse.py  test_playwright_tooltips.py  test_playwright_wide_tables.py  test_public_contract.py  test_public_hygiene.py  test_publish_cache_invalidation.py  test_publish_discovery.py  (+10 more)
tests/e2e/: kpress.yml
tests/e2e/docs/: airspeed-velocity.md  index.md  reference.md
tests/fixtures/baselines/: no-pipeline-main.sha256
tests/fixtures/documents/: minimal.md  rich-components.md  semantic-components.md  toc-collapse.md
tests/fixtures/textpress_kash/: tailwind-migration.json
tests/golden/: README.md
tests/golden/scenarios/: minimal-doc.yaml  rich-components.yaml  semantic-components.yaml  toc-collapse.yaml
tests/js/: behaviors.test.js  doc-actions.test.js  history.test.js  kpress-dom.test.js  lifecycle.test.js  menu.test.js  overlay.test.js  runtime.test.js  settings-widget.test.js  theme-engine.test.js  toc-collapse.test.js  tooltips-phase1.test.js  vitest.config.mjs
(+59 files in other folders)
