# ---- Project Info and Dependencies ----

[project.urls]
Homepage = "https://github.com/jlevy/kpress"
Repository = "https://github.com/jlevy/kpress"
Documentation = "https://github.com/jlevy/kpress#readme"
Issues = "https://github.com/jlevy/kpress/issues"

[project]
name = "kpress"
description = "Reusable document rendering and publishing layer for KPress-format documents."
authors = [
    { name="Joshua Levy", email="joshua@cal.berkeley.edu" },
]
maintainers = [
    { name="Joshua Levy", email="joshua@cal.berkeley.edu" },
]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
keywords = ["documents", "html", "markdown", "publishing", "rendering"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
    # Blocks accidental publishing to PyPI (PyPI rejects this classifier).
    # Remove this line when ready for the first public release:
    "Private :: Do Not Upload",
]


# ---- Main dependencies ----

dependencies = [
    "frontmatter-format>=0.3.0",
    "latex2mathml>=3.81.0",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "nh3>=0.3.5",
    "pygments>=2.20.0",
    "strif>=3.0.1",
]

[project.optional-dependencies]
optimize = [
    "brotli>=1.2.0",
]
# Optional browser-print PDF backend. The Playwright wheel is covered by the
# cool-off + lockfile like any other dep, but using it also requires a
# separate `playwright install chromium` step that downloads browser binaries
# from Playwright's CDN — outside the registry/lockfile trust boundary. That
# download is a deliberate, explicit operator action (see format/pdf.py), never
# an install-time script; keep it that way.
pdf = [
    "playwright>=1.59.0",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.12",
    "codespell>=2.4.2",
    "rich>=15.0.0",
    "basedpyright>=1.39.3",
    "funlog>=0.2.1",
]

[project.scripts]
kpress = "kpress.cli:main"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package. Hatchling ships everything under it,
# including package data (py.typed, templates, CSS, JS, fonts, icons, KaTeX);
# the clean-room wheel test verifies the assets land in the wheel.
packages = ["src/kpress"]


# ---- Settings ----

[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    "B008", # https://docs.astral.sh/ruff/rules/function-call-in-default-argument/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.isort]
known-first-party = ["kpress"]

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["src", "tests", "devtools"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false

[tool.codespell]
# Skip test content/golden outputs and vendored third-party assets.
skip = "tests/fixtures,tests/golden/accepted,tests/e2e/docs,src/kpress/format/static/katex,src/kpress/format/static/icons,*.woff2,uv.lock"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
pythonpath = ["."]
norecursedirs = []
filterwarnings = []
timeout = 60
timeout_method = "thread"
